change_hardirq_read: Return IRQ monitoring

--- a/collectors/ebpf.plugin/ebpf.d.conf
+++ b/collectors/ebpf.plugin/ebpf.d.conf
@@ -55,14 +55,14 @@
     disk = no
     fd = yes
     filesystem = no
-    hardirq = no
+    hardirq = yes
     mdflush = no
     mount = yes
     oomkill = yes
     process = yes
     shm = yes
     socket = no
-    softirq = no
+    softirq = yes
     sync = yes
     swap = yes
     vfs = no
