Support FLB forward input and FLB output plugins.
Squashed commit of the following:

commit 55e2bf4fb34a2e02ffd0b280790197310a5299f3
Author: Dim-P <dimitris1703@gmail.com>
Date:   Thu Apr 13 16:41:09 2023 +0300

    Remove error.log from stock config

commit bbdc62c2c9727359bc3c8ef8c33ee734d0039be7
Author: Dim-P <dimitris1703@gmail.com>
Date:   Thu Apr 13 16:37:48 2023 +0300

    Add cleanup of Fluent Bit outputs in p_file_info_destroy()

commit 09b0aa4268ec1ccef160c99c5d5f31b6388edd28
Author: Dim-P <dimitris1703@gmail.com>
Date:   Thu Apr 13 14:34:17 2023 +0300

    Some code and config cleanup

commit 030d074667d5ee2cad10f85cd836ca90e29346ad
Author: Dim-P <dimitris1703@gmail.com>
Date:   Thu Apr 13 13:04:08 2023 +0300

    Enable additional Fluent Bit output plugins for shared library

commit 490aa5d44caa38042521d24c6b886b8b4a59a73c
Author: Dim-P <dimitris1703@gmail.com>
Date:   Thu Apr 13 01:33:19 2023 +0300

    Add initialization of Fluent Bit user-configured outputs

commit c96e9fe9cea96549aa5eae09d0deeb130da02793
Author: Dim-P <dimitris1703@gmail.com>
Date:   Tue Apr 4 23:13:16 2023 +0100

    Complete read of parameters for FLB outputs config

commit 00988897f9b86d1ecc5c141b19df7ad7d74f7e96
Author: Dim-P <dimitris1703@gmail.com>
Date:   Mon Apr 3 19:43:31 2023 +0100

    Update README.md

commit 6deea5399c2707942aeaa51408f999ca45dfd351
Author: Dim-P <dimitris1703@gmail.com>
Date:   Mon Apr 3 16:02:28 2023 +0100

    Refactor Syslog_parser_config_t and add Flb_socket_config_t

commit 7bf998a4c298bbd489ef735c56a6e85a137772c9
Author: Dim-P <dimitris1703@gmail.com>
Date:   Mon Apr 3 14:19:57 2023 +0100

    Update README.md

commit c353d194b12c54f134936072ebaded0424d73cc0
Author: Dim-P <dimitris1703@gmail.com>
Date:   Fri Mar 31 14:52:57 2023 +0100

    Update README.md

commit 6be726eaff3738ba7884de799aa52949833af65a
Author: Dim-P <dimitris1703@gmail.com>
Date:   Fri Mar 31 13:06:29 2023 +0100

    Update README. Fix docker_events streaming

commit 6aabfb0f1ef0

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -276,7 +276,7 @@
 	## occurences of certain `sudo` commands, using POSIX regular expressions.
 
 	## Required settings
-	enabled = yes
+	enabled = no
 	log type = flb_generic
 
 	## Optional settings, common to all log source. 
@@ -316,7 +316,7 @@
 	## occurences of certain keywords, using POSIX regular expressions.
 
 	## Required settings
-	enabled = yes
+	enabled = no
 	log type = flb_generic
 
 	## Optional settings, common to all log source. 
@@ -466,3 +466,79 @@
 	# # custom 1 regex name = test
 	# custom 1 regex = .*\bUART0\b.*
 	# # custom 1 ignore case = no
+
+[Forward in systemd]
+	## Example: Log collector that will collect streamed Systemd logs
+	## according to global "forward in" configuration found in netdata.conf.
+
+	## Required settings
+	enabled = no
+	log type = flb_systemd
+
+	## Optional settings, common to all log source. 
+	## Uncomment to override global equivalents.
+	# update every = 1
+	# circular buffer max size MiB = 64
+	# circular buffer drop logs if full = no
+	# compression acceleration = 1
+	# db mode = none
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
+
+	## Streaming input settings.
+	log source = forward
+	stream guid = 6ce266f5-2704-444d-a301-2423b9d30735
+
+	## Charts to enable
+	priority value chart = yes
+	severity chart = yes
+	facility chart = yes
+
+[Forward Docker Events]
+	## Example: Log collector that will collect streamed Docker Events logs
+	## according to global "forward in" configuration found in netdata.conf.
+
+	## Required settings
+	enabled = no
+	log type = flb_docker_events
+
+	## Optional settings, common to all log source. 
+	## Uncomment to override global equivalents.
+	# update every = 1
+	# circular buffer max size MiB = 64
+	# circular buffer drop logs if full = no
+	# compression acceleration = 1
+	# db mode = none
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
+
+	## Streaming input settings.
+	log source = forward
+	stream guid = 6ce266f5-2704-444d-a301-2423b9d30736
+
+	## Charts to enable
+	event type chart = yes
+
+[Forward collection]
+	## Example: Log collector that will collect streamed logs of any type
+	## according to global "forward in" configuration found in netdata.conf
+	## and will also save them in a local database.
+
+	## Required settings
+	enabled = no
+	log type = flb_generic
+
+	## Optional settings, common to all log source. 
+	## Uncomment to override global equivalents.
+	# update every = 1
+	# circular buffer max size MiB = 64
+	# circular buffer drop logs if full = no
+	# compression acceleration = 1
+	db mode = full
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
+
+	## Streaming input settings.
+	log source = forward
+	stream guid = 6ce266f5-2704-444d-a301-2423b9d30737
+	
