--- a/health/health.d/dockerd.conf
+++ b/health/health.d/dockerd.conf
@@ -1,11 +1,11 @@
  template: docker_unhealthy_containers
-       on: docker.unhealthy_containers
+       on: docker.containers_health_status
     class: Errors
      type: Containers
 component: Docker
     units: unhealthy containers
     every: 10s
-   lookup: average -10s
+   lookup: average -10s of unhealthy
      crit: $this > 0
      info: average number of unhealthy docker containers over the last 10 seconds
        to: sysadmin
