--- a/health/health.d/docker.conf
+++ b/health/health.d/docker.conf
@@ -1,11 +1,11 @@
- template: docker_unhealthy_containers
-       on: docker.containers_health_status
+ template: docker_container_unhealthy
+       on: docker.container_health_status
     class: Errors
      type: Containers
 component: Docker
-    units: unhealthy containers
+    units: status
     every: 10s
    lookup: average -10s of unhealthy
      crit: $this > 0
-     info: average number of unhealthy docker containers over the last 10 seconds
+     info: ${label:container_name} docker container health status is unhealthy
        to: sysadmin
