Add option to toggle number of collected logs metrics and charts

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -16,6 +16,8 @@
 	# disk space limit MiB = 500
 
 	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
 	severity chart = yes
 	subsystem chart = yes
 	device chart = yes
@@ -50,6 +52,8 @@
 	log path = auto
 
 	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
 	priority value chart = yes
 	severity chart = yes
 	facility chart = yes
@@ -77,6 +81,8 @@
 	log path = auto
 
 	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
 	event type chart = yes
 
 	# Example of how to capture create / attach / die events for a named container:
@@ -124,6 +130,8 @@
 	verify parsed logs = yes
 
 	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
 	vhosts chart = yes
 	ports chart = yes
 	IP versions chart = yes
@@ -168,6 +176,8 @@
 	verify parsed logs = yes
 
 	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
 	vhosts chart = yes
 	ports chart = yes
 	IP versions chart = yes
@@ -206,6 +216,10 @@
 	## log path = /tmp/netdata/var/log/netdata/error.log
 	## See README for more information on 'log path = auto' option
 	log path = auto
+
+	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
 	
 	## Examples of extracting custom metrics from Netdata's error.log:
 
@@ -294,6 +308,10 @@
 	## log path = /var/log/auth.log
 	## See README for more information on 'log path = auto' option
 	log path = auto
+
+	# Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
 	
 	## Examples of extracting custom metrics from auth.log:
 	# custom 1 chart = failed su
@@ -335,6 +353,10 @@
 	## log path = /var/log/messages
 	## See README for more information on 'log path = auto' option
 	log path = auto
+
+	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
 	
 	## Examples of extracting custom metrics from syslog:
 	# custom 1 chart = identifier
@@ -393,6 +415,8 @@
 	unix_perm = 0666
 	
 	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
 	priority value chart = yes
 	severity chart = yes
 	facility chart = yes
@@ -433,6 +457,8 @@
 	# unix_perm = 0666
 	
 	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
 	priority value chart = yes
 	severity chart = yes
 	facility chart = yes
@@ -460,6 +486,10 @@
 	min bytes = 1
 	# separator = X
 	# format = json
+
+	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
 
 	## Example of extracting custom metrics from serial interface messages:
 	# custom 1 chart = UART0
@@ -490,6 +520,8 @@
 	stream guid = 6ce266f5-2704-444d-a301-2423b9d30735
 
 	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
 	priority value chart = yes
 	severity chart = yes
 	facility chart = yes
@@ -517,6 +549,8 @@
 	stream guid = 6ce266f5-2704-444d-a301-2423b9d30736
 
 	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
 	event type chart = yes
 
 [Forward collection]
@@ -542,3 +576,6 @@
 	log source = forward
 	stream guid = 6ce266f5-2704-444d-a301-2423b9d30737
 	
+	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
