Disable kmsg log collector by default

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -2,7 +2,7 @@
 	## Example: Log collector that will collect new kernel ring buffer logs
 
 	## Required settings
-	enabled = yes
+	enabled = no
 	log type = flb_kmsg
 
 	## Optional settings, common to all log source. 
