change_hardirq_read: This commit brings important changes: Add new info message that help us to debug events; modify hardirq to simplfy shutdown; Disable hardirq, that is right now the slowest thread to close, because it needs to disable different tracepoints.

--- a/collectors/ebpf.plugin/ebpf.d.conf
+++ b/collectors/ebpf.plugin/ebpf.d.conf
@@ -55,7 +55,7 @@
     disk = no
     fd = yes
     filesystem = no
-    hardirq = yes
+    hardirq = no
     mdflush = no
     mount = yes
     oomkill = yes
