--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -747,6 +747,8 @@ set(RRD_PLUGIN_FILES
         database/sqlite/sqlite_db_migration.h
         database/sqlite/sqlite_aclk.c
         database/sqlite/sqlite_aclk.h
+		database/sqlite/sqlite_label.c
+        database/sqlite/sqlite_label.h
         database/sqlite/sqlite_health.c
         database/sqlite/sqlite_health.h
         database/sqlite/sqlite_aclk_node.c
