--- a/Makefile.am
+++ b/Makefile.am
@@ -466,6 +466,8 @@ RRD_PLUGIN_FILES = \
 	database/sqlite/sqlite_aclk.h \
     database/sqlite/sqlite_metadata.c \
     database/sqlite/sqlite_metadata.h \
+	database/sqlite/sqlite_label.c \
+    database/sqlite/sqlite_label.h \
     database/sqlite/sqlite_health.c \
     database/sqlite/sqlite_health.h \
     database/sqlite/sqlite_aclk_node.c \
