--- a/system/netdata.conf
+++ b/system/netdata.conf
@@ -1,6 +1,6 @@
 # netdata configuration
 #
-# You can get the latest version of this file, using
+# You can get the latest version of this file, using:
 #
 #  netdatacli dumpconfig > /etc/netdata/netdata.conf
 #
