feat: additional postfix metrics

--- a/collectors/python.d.plugin/postfix/Makefile.inc
+++ b/collectors/python.d.plugin/postfix/Makefile.inc
@@ -6,6 +6,8 @@
 
 # install these files
 dist_python_DATA       += postfix/postfix.chart.py
+dist_python_DATA       += postfix/postfix_j.chart.py
+dist_python_DATA       += postfix/postfix_log.chart.py
 dist_pythonconfig_DATA += postfix/postfix.conf
 
 # do not install these files, but include them in the distribution
