--- a/collectors/python.d.plugin/postfix/Makefile.inc
+++ b/collectors/python.d.plugin/postfix/Makefile.inc
@@ -9,6 +9,8 @@ dist_python_DATA       += postfix/postfix.chart.py
 dist_python_DATA       += postfix/postfix_j.chart.py
 dist_python_DATA       += postfix/postfix_log.chart.py
 dist_pythonconfig_DATA += postfix/postfix.conf
+dist_pythonconfig_DATA += postfix/postfix_j.conf
+dist_pythonconfig_DATA += postfix/postfix_log.conf
 
 # do not install these files, but include them in the distribution
 dist_noinst_DATA       += postfix/README.md postfix/Makefile.inc
