debugfs_collector: Add common structure and also an external file that will be used to parse new file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -213,6 +213,7 @@ APPS_PLUGIN_FILES = \
 
 DEBUGFS_PLUGIN_FILES = \
     collectors/debugfs.plugin/debugfs_plugin.c \
+    collectors/debugfs.plugin/debugfs_extfrag_index.c \
     $(LIBNETDATA_FILES) \
     $(NULL)
 
