debugfs_collector: Rename file and modify autoconf and cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -531,7 +531,7 @@ set(APPS_PLUGIN_FILES
 set(DEBUGFS_PLUGIN_FILES
         collectors/debugfs.plugin/debugfs_plugin.c
         collectors/debugfs.plugin/debugfs_plugin.h
-        collectors/debugfs.plugin/debugfs_extfrag_index.c
+        collectors/debugfs.plugin/debugfs_extfrag.c
         collectors/debugfs.plugin/debugfs_zswap.c
         )
 
