--- a/collectors/python.d.plugin/tor/tor.conf
+++ b/collectors/python.d.plugin/tor/tor.conf
@@ -61,7 +61,7 @@
 #
 # Additionally to the above, tor plugin also supports the following:
 #
-#     control_addr: 'port'    # tor control IP address (defaults to '127.0.0.1')
+#     control_addr: 'address' # tor control IP address (defaults to '127.0.0.1')
 #     control_port: 'port'    # tor control port
 #     password: 'password'    # tor control password
 #
