fix merge conflicts, this PR introduce a new submodule
Signed-off-by: Tasos Katsoulas <tasos@netdata.cloud>

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 	path = web/server/h2o/libh2o
 	url = https://github.com/h2o/h2o.git
 	ignore = untracked
+[submodule "libnetdata/sentry/sentry-native"]
+	path = libnetdata/sentry/sentry-native
+	url = https://github.com/getsentry/sentry-native.git
