--- a/Makefile.am
+++ b/Makefile.am
@@ -128,6 +128,7 @@ AM_CFLAGS = \
     $(OPTIONAL_CUPS_CFLAGS) \
     $(OPTIONAL_XENSTAT_CFLAGS) \
     $(OPTIONAL_BPF_CFLAGS) \
+    $(OPTIONAL_SENTRY_CFLAGS) \
     $(NULL)
 
 sbin_PROGRAMS =
@@ -1130,6 +1131,7 @@ NETDATA_COMMON_LIBS = \
     $(OPTIONAL_YAML_LIBS) \
     $(OPTIONAL_ATOMIC_LIBS) \
     $(OPTIONAL_DL_LIBS) \
+    $(OPTIONAL_SENTRY_LIBS) \
     $(NULL)
 
 if ENABLE_ACLK
