Use log timestamps when possible, instead of collection timestamps. Also, add config options for Fluent Bit engine and remove tail_plugin.
Squashed commit of the following:

commit b16a02eb6e3a90565c90e0a274b87b123e7b18e5
Author: Dim-P <dimitris1703@gmail.com>
Date:   Tue May 16 19:38:57 2023 +0100

    Add Fluent Bit service config options to netdata.conf. Add monitoring of new log file fluentbit.log

commit ab77c286294548ea62a3879ac0f8b8bbfe6a0687
Author: Dim-P <dimitris1703@gmail.com>
Date:   Mon May 15 21:25:17 2023 +0100

    Remove some debug prints

commit 46d64ad2434e69b1d20720297aec1ddb869e1f84
Author: Dim-P <dimitris1703@gmail.com>
Date:   Mon May 15 21:19:32 2023 +0100

    Fix null values in charts

commit 8ec96821d6a882f28cbd19244ebdfc86c807d2f4
Author: Dim-P <dimitris1703@gmail.com>
Date:   Mon May 15 17:43:04 2023 +0100

    Update README.md to reflect log timestamp changes

commit 079a91858cf9db2f74711581235bc17eb97c7dad
Author: Dim-P <dimitris1703@gmail.com>
Date:   Mon May 15 16:23:14 2023 +0100

    Add configurable option for 'update timeout'

commit 72b5e2505d4657fcbb5ccb6eeee00c45eb0b51ff
Author: Dim-P <dimitris1703@gmail.com>
Date:   Mon May 15 16:05:08 2023 +0100

    Revert logsmanagement.conf to logs-manag-master one

commit 70d0ea6f8d272fff318aa3095d90a78dcc3411a7
Author: Dim-P <dimitris1703@gmail.com>
Date:   Mon May 15 16:02:00 2023 +0100

    Fix bug of circ buff items not marked as done

commit 5716420838771edb7842be4669bf96235b15cf71
Author: Dim-P <dimitris1703@gmail.com>
Date:   Mon May 15 16:01:41 2023 +0100

    Fix do_custom_charts_update() to work for all log sources

commit a8def8f53fd25c3efa56ef27e267df3261913a8e
Author: Dim-P <dimitris1703@gmail.com>
Date:   Fri May 12 18:20:20 2023 +0100

    Remove GENERIC and WEB_LOG cases. Remove tail_plugin.c/h. Remove generic_parser().

commit 1cf05966e33491dbeb9b877f18d1ea8643aabeba
Author: Dim-P <dimitris1703@gmail.com>
Date:   Fri May 12 16:54:59 2023 +0100

    Fix FLB_GENERIC and FL

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -8,6 +8,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -41,6 +42,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -70,6 +72,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -109,6 +112,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -158,6 +162,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -204,6 +209,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -285,6 +291,63 @@
 	custom 12 regex = \ P\[.+\]\ :
 	custom 12 ignore case = no
 
+[Netdata fluentbit.log]
+	## Example: Log collector that will tail Netdata's 
+	## embedded Fluent Bit's logs
+
+	## Required settings
+	enabled = yes
+	log type = flb_generic
+
+	## Optional settings, common to all log source. 
+	## Uncomment to override global equivalents.
+	# update every = 1
+	# update timeout = 10
+	# circular buffer max size MiB = 64
+	# circular buffer drop logs if full = no
+	# compression acceleration = 1
+	# db mode = none
+	# circular buffer flush to db = 6
+	# disk space limit MiB = 500
+
+	## This section supports auto-detection of log file path if section name
+	## is left unchanged, otherwise it can be set manually, e.g.:
+	## log path = /tmp/netdata/var/log/netdata/fluentbit.log
+	## See README for more information on 'log path = auto' option
+	log path = auto
+
+	## Charts to enable
+	# collected logs total chart enable = no
+	# collected logs rate chart enable = yes
+	
+	## Examples of extracting custom metrics from fluentbit.log:
+
+	## log level chart
+	custom 1 chart = log level
+	custom 1 regex name = error
+	custom 1 regex = \[error\]
+	custom 1 ignore case = no
+
+	custom 2 chart = log level
+	custom 2 regex name = warning
+	custom 2 regex = \[warning\]
+	custom 2 ignore case = no
+
+	custom 3 chart = log level
+	custom 3 regex name = info
+	custom 3 regex = \[ info\]
+	custom 3 ignore case = no
+
+	custom 4 chart = log level
+	custom 4 regex name = debug
+	custom 4 regex = \[debug\]
+	custom 4 ignore case = no
+
+	custom 5 chart = log level
+	custom 5 regex name = trace
+	custom 5 regex = \[trace\]
+	custom 5 ignore case = no
+
 [auth.log tail]
 	## Example: Log collector that will tail auth.log file and count 
 	## occurences of certain `sudo` commands, using POSIX regular expressions.
@@ -296,6 +359,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -340,6 +404,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -390,6 +455,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -432,6 +498,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -473,6 +540,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -508,6 +576,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -537,6 +606,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -565,6 +635,7 @@
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents.
 	# update every = 1
+	# update timeout = 10
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
