Update oracledb.conf with new cs/dsn connection type

--- a/collectors/python.d.plugin/oracledb/oracledb.conf
+++ b/collectors/python.d.plugin/oracledb/oracledb.conf
@@ -63,9 +63,8 @@
 #
 #     user: username          # the username for the user account. Required.
 #     password: password      # the password for the user account. Required.
-#     server: localhost:1521  # the IP address or hostname of the Oracle Database Server. Required.
-#     service: XE             # the Oracle Database service name. Required. To view the services available on your server,
-#                               run this query: `SELECT value FROM v$parameter WHERE name='service_names'`.
+#     cs: connection string   # the data source name or connection 
+#                             # string for the database. Required.
 #
 # ----------------------------------------------------------------------
 # AUTO-DETECTION JOBS
@@ -74,11 +73,9 @@
 #local:
 #  user: 'netdata'
 #  password: 'secret'
-#  server: 'localhost:1521'
-#  service: 'XE'
+#  cs: '(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1521)(host=adb.us-ashburn-1.oraclecloud.com))(connect_data=(service_name=sdf98789f98sfs98f_projectid_low.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))'
 
 #remote:
 #  user: 'netdata'
 #  password: 'secret'
-#  server: '10.0.0.1:1521'
-#  service: 'XE'
+#  cs: '(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1521)(host=adb.us-ashburn-1.oraclecloud.com))(connect_data=(service_name=sdf98789f98sfs98f_projectid_low.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))'
