Renamed cs to dsn and added dsn docs

--- a/collectors/python.d.plugin/oracledb/oracledb.conf
+++ b/collectors/python.d.plugin/oracledb/oracledb.conf
@@ -63,8 +63,8 @@
 #
 #     user: username          # the username for the user account. Required.
 #     password: password      # the password for the user account. Required.
-#     cs: connection string   # the data source name or connection 
-#                             # string for the database. Required.
+#     dsn: data source name   # the data source name or connection string for
+#                             # the database. (See docs for more) Required.
 #
 # ----------------------------------------------------------------------
 # AUTO-DETECTION JOBS
@@ -73,9 +73,9 @@
 #local:
 #  user: 'netdata'
 #  password: 'secret'
-#  cs: '(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1521)(host=adb.us-ashburn-1.oraclecloud.com))(connect_data=(service_name=sdf98789f98sfs98f_projectid_low.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))'
+#  dsn: '(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1521)(host=adb.us-ashburn-1.oraclecloud.com))(connect_data=(service_name=sdf98789f98sfs98f_projectid_low.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))'
 
 #remote:
 #  user: 'netdata'
 #  password: 'secret'
-#  cs: '(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1521)(host=adb.us-ashburn-1.oraclecloud.com))(connect_data=(service_name=sdf98789f98sfs98f_projectid_low.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))'
+#  dsn: '(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1521)(host=adb.us-ashburn-1.oraclecloud.com))(connect_data=(service_name=sdf98789f98sfs98f_projectid_low.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))'
