--- a/collectors/python.d.plugin/oracledb/oracledb.conf
+++ b/collectors/python.d.plugin/oracledb/oracledb.conf
@@ -63,8 +63,9 @@
 #
 #     user: username          # the username for the user account. Required.
 #     password: password      # the password for the user account. Required.
-#     dsn: data source name   # the data source name or connection string for
-#                             # the database. (See docs for more) Required.
+#     server: localhost:1521  # the IP address or hostname (and port) of the Oracle Database Server. Required.
+#     service: XE             # the Oracle Database service name. Required. To view the services available on your server,
+#                               run this query: `select SERVICE_NAME from gv$session where sid in (select sid from V$MYSTAT)`.
 #
 # ----------------------------------------------------------------------
 # AUTO-DETECTION JOBS
@@ -73,9 +74,11 @@
 #local:
 #  user: 'netdata'
 #  password: 'secret'
-#  dsn: '(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1521)(host=adb.us-ashburn-1.oraclecloud.com))(connect_data=(service_name=sdf98789f98sfs98f_projectid_low.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))'
+#  server: 'localhost:1521'
+#  service: 'XE'
 
 #remote:
 #  user: 'netdata'
 #  password: 'secret'
-#  dsn: '(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1521)(host=adb.us-ashburn-1.oraclecloud.com))(connect_data=(service_name=sdf98789f98sfs98f_projectid_low.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))'
+#  server: '10.0.0.1:1521'
+#  service: 'XE'
