correcting delay calculation
1. configurable multiple windowed delays
2. relay based email counts
3. configurable relay for delay calculation

--- a/collectors/python.d.plugin/postfix/postfix_log.conf
+++ b/collectors/python.d.plugin/postfix/postfix_log.conf
@@ -69,5 +69,8 @@ update_every: 60
 # AUTO-DETECTION JOBS
 
 local:
-  delay_window_span: 2400
+  delay_window_span: [2400, 10800]
   log_path: /var/log/mail.log
+  relay: pbfilter
+  email_counter_relay: pbfilter
+  
