--- a/tests/urls/request.sh.in
+++ b/tests/urls/request.sh.in
@@ -104,6 +104,14 @@ netdata_download_charts() {
     grep -w "id" tests/charts.out| cut -d: -f2 | grep "\"," | sed s/,//g | sort
 }
 
+# Download contexts from charts
+netdata_download_contexts() {
+    curl -v -k --create-dirs -o "$OUTDIR/contexts.out" "$1" 2> "$OUTDIR/contexts.err"
+    netdata_test_download "$OUTDIR/contexts.err" "$1"
+
+     grep ":{" tests/contexts.out | cut -d: -f1| cut -d\" -f2| sort
+}
+
 #Test options for a specific chart
 netdata_download_chart() {
     SEPARATOR="&"
@@ -290,6 +298,13 @@ netdata_run_original_tests() {
     done
 }
 
+netdata_run_context_tests() {
+    CTXS=$( netdata_download_contexts "$MURL/api/v1/contexts")
+    for I in $CTXS ; do
+        echo "$I"
+    done
+}
+
 ################################################################################################
 ####                                                                                        ####
 ####                                    MAIN ROUTINE                                        ####
@@ -297,10 +312,12 @@ netdata_run_original_tests() {
 ################################################################################################
 
 ANCIENTTESTS=0
+CONTEXTS=0
 while [ -n "${1}" ]; do
     case "${1}" in
         "--url") MURL="$2" ;;
         "--old") ANCIENTTESTS=1 ;;
+        "--contexts") CONTEXTS=1 ;;
     esac
     shift 1
 done
@@ -314,6 +331,10 @@ netdata_create_directory $ERRDIR
 
 if [ "${ANCIENTTESTS}" == "1" ]; then
     netdata_run_original_tests
+fi
+
+if [ "${CONTEXTS}" == "1" ]; then
+    netdata_run_context_tests
 fi
 
 echo -e "${GREEN}ALL the URLS got 200 as answer! ${NOCOLOR}"
