--- a/tests/urls/request.sh.in
+++ b/tests/urls/request.sh.in
@@ -104,12 +104,12 @@ netdata_download_charts() {
     grep -w "id" tests/charts.out| cut -d: -f2 | grep "\"," | sed s/,//g | sort
 }
 
-# Download contexts from charts
-netdata_download_contexts() {
-    curl -v -k --create-dirs -o "$OUTDIR/contexts.out" "$1" 2> "$OUTDIR/contexts.err"
-    netdata_test_download "$OUTDIR/contexts.err" "$1"
+# Download endpoints from charts
+netdata_download_endpoints() {
+    curl -v -k --create-dirs -o "$OUTDIR/$2.out" "$1" 2> "$OUTDIR/$2.err"
+    netdata_test_download "$OUTDIR/$2.err" "$1"
 
-    grep ":{" tests/contexts.out | cut -d: -f1| cut -d\" -f2 | sort
+    grep ":{" tests/$2.out | cut -d: -f1| cut -d\" -f2 | sort
 }
 
 #Test options for a specific chart
@@ -299,7 +299,7 @@ netdata_run_original_tests() {
 }
 
 netdata_run_context_tests() {
-    CTXS=$( netdata_download_contexts "$MURL/api/v1/contexts")
+    CTXS=$( netdata_download_endpoints "$MURL/api/v1/contexts" "contexts")
     for I in $CTXS ; do
         if [ "${I}" != "contexts" ]; then
             netdata_download_various "$MURL" "/api/v1/context?context=$I" "$I"
@@ -315,11 +315,13 @@ netdata_run_context_tests() {
 
 ANCIENTTESTS=0
 CONTEXTS=0
+PROCESSESS=0
 while [ -n "${1}" ]; do
     case "${1}" in
         "--url") MURL="$2" ;;
         "--old") ANCIENTTESTS=1 ;;
         "--contexts") CONTEXTS=1 ;;
+        "--processes") PROCESSES=1 ;;
     esac
     shift 1
 done
