replace "families" with "chart labels"

--- a/health/health.d/net.conf
+++ b/health/health.d/net.conf
@@ -89,7 +89,7 @@ component: Network
 component: Network
        os: linux
     hosts: *
- families: !wl* *
+chart labels: device=!wl* *
    lookup: sum -10m unaligned absolute of received
      calc: (($inbound_packets_dropped != nan AND $this > 10000) ? ($inbound_packets_dropped * 100 / $this) : (0))
     units: %
@@ -106,7 +106,7 @@ component: Network
 component: Network
        os: linux
     hosts: *
- families: !wl* *
+chart labels: device=!wl* *
    lookup: sum -10m unaligned absolute of sent
      calc: (($outbound_packets_dropped != nan AND $this > 1000) ? ($outbound_packets_dropped * 100 / $this) : (0))
     units: %
@@ -123,7 +123,7 @@ component: Network
 component: Network
        os: linux
     hosts: *
- families: wl*
+chart labels: device=wl*
    lookup: sum -10m unaligned absolute of received
      calc: (($inbound_packets_dropped != nan AND $this > 10000) ? ($inbound_packets_dropped * 100 / $this) : (0))
     units: %
@@ -140,7 +140,7 @@ component: Network
 component: Network
        os: linux
     hosts: *
- families: wl*
+chart labels: device=wl*
    lookup: sum -10m unaligned absolute of sent
      calc: (($outbound_packets_dropped != nan AND $this > 1000) ? ($outbound_packets_dropped * 100 / $this) : (0))
     units: %
