--- a/health/health.d/disks.conf
+++ b/health/health.d/disks.conf
@@ -16,7 +16,7 @@
 component: Disk
        os: linux freebsd
     hosts: *
- families: !/dev !/dev/* !/run !/run/* *
+chart labels: mount_point=!/dev !/dev/* !/run !/run/* *
      calc: $used * 100 / ($avail + $used)
     units: %
     every: 1m
@@ -33,7 +33,7 @@ component: Disk
 component: Disk
        os: linux freebsd
     hosts: *
- families: !/dev !/dev/* !/run !/run/* *
+chart labels: mount_point=!/dev !/dev/* !/run !/run/* *
      calc: $used * 100 / ($avail + $used)
     units: %
     every: 1m
